--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/static": "^8.2.0",
     "@prisma/client": "^6.15.0",
+    "argon2": "^0.44.0",
     "chokidar": "^4.0.3",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.1",
