--- a/web/.env.development
+++ b/web/.env.development
@@ -1,2 +1,2 @@
-VITE_SOCKET_URL=http://127.0.0.1:3001
-VITE_API_BASE=http://127.0.0.1:3001
+VITE_SOCKET_URL=http://localhost:3001
+VITE_API_BASE=http://localhost:3001
